--- a/Biblioteca/Biblioteca/Biblioteca.csproj
+++ b/Biblioteca/Biblioteca/Biblioteca.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controladores\controlCRUDLibros.cs" />
     <Compile Include="Controladores\controlLogin.cs" />
     <Compile Include="Modelos\modeloGenero.cs" />
     <Compile Include="Modelos\modeloLibro.cs" />
@@ -58,6 +59,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vistas\vistaLibros.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\vistaLibros.Designer.cs">
+      <DependentUpon>vistaLibros.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\vistaPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +89,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vistas\vistaLibros.resx">
+      <DependentUpon>vistaLibros.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\vistaPrincipal.resx">
       <DependentUpon>vistaPrincipal.cs</DependentUpon>
     </EmbeddedResource>
